--- a/UWP/UWP.csproj
+++ b/UWP/UWP.csproj
@@ -155,9 +155,8 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="FourOperations, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\演示\FourOperations\FourOperations\bin\Debug\netstandard2.0\FourOperations.dll</HintPath>
+    <Reference Include="FourOperations">
+      <HintPath>F:\软件工程团队作业\FourOperations\FourOperationsDemo\bin\Debug\netcoreapp3.1\FourOperations.dll</HintPath>
     </Reference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
