--- a/FourOperations/UWPApp1/UWPApp1.csproj
+++ b/FourOperations/UWPApp1/UWPApp1.csproj
@@ -130,6 +130,7 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\lADPBGY15Uv9VprM3Mzc_220_220.jpg_720x720q90g.jpg" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
