--- a/FourOperations/WpfFourOperationsApp/WpfFourOperationsApp.csproj
+++ b/FourOperations/WpfFourOperationsApp/WpfFourOperationsApp.csproj
@@ -11,6 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MaterialDesignThemes" Version="3.1.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="FourOperations">
       <HintPath>..\FourOperations\bin\Debug\netstandard2.0\FourOperations.dll</HintPath>
     </Reference>
