--- a/FourOperations/UWPApp1/UWPApp1.csproj
+++ b/FourOperations/UWPApp1/UWPApp1.csproj
@@ -153,6 +153,7 @@
     <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
     <Content Include="Assets\StoreLogo.png" />
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
+    <Content Include="打印文件一年级加法题目.txt" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
